feat: add first section

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -4,12 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shelter</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <section class="section" id="start_screen">
-
+        <section class="main_section" id="start_screen">
+            <header>
+                <div id="logo">
+                    <h1>Cozy House</h1>
+                    <p id="logo_phrase">Shelter for pets in Boston</p>
+                </div>
+                <nav>
+                    <ul>
+                        <li>About the shelter</li>
+                        <li>Our pets</li>
+                        <li>Help the shelter</li>
+                        <li>Contacts</li>
+                    </ul>
+                </nav>
+            </header>
+            <div id="welcome">
+                <div id="welcome_text">
+                    <h2>Not only people need a house</h2>
+                    <p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
+                    <div id="button_items">
+                        <p>Make a friend</p>
+                    </div>
+                </div>
+                <div id="welcome_image">
+                    <img src="../../assets/images/main/start-screen-puppy.png" alt="puppy">
+                </div>
+            </div>
         </section>
         <footer>
             
