--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <section class="main_section" id="start_screen">
+        <section id="start_screen">
             <header>
                 <div id="logo">
                     <h1>Cozy House</h1>
@@ -33,6 +33,18 @@
                 </div>
                 <div id="welcome_image">
                     <img src="../../assets/images/main/start-screen-puppy.png" alt="puppy">
+                </div>
+            </div>
+        </section>
+        <section id="about">
+            <div id="about_content">
+                <div id="about_image">
+                    <img src="../../assets/images/main/about-pets.png" alt="pets">
+                </div>
+                <div id="about_text">
+                    <h3>About the shelter “Cozy House”</h3>
+                    <p>Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
+                    <p>We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p>
                 </div>
             </div>
         </section>
