--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -48,6 +48,39 @@
                 </div>
             </div>
         </section>
+        <section id="pets">
+            <div id="pets_content">
+                <h3>Our friends who<br>are looking for a house</h3>
+                <div id="slider">
+                    <img id="arrow" src="../../assets/images/main/button_arrow.png" alt="arrow">
+                    <div class="card" id="katrine">
+                        <img src="../../assets/images/main/pets-katrine.png" alt="katrine">
+                        <p class="pet_name">Katrine</p>
+                        <div id="button_learn">
+                            <p>Learn more</p>
+                        </div>
+                    </div>
+                    <div class="card" id="katrine">
+                        <img src="../../assets/images/main/pets-jennifer.png" alt="jennifer">
+                        <p class="pet_name">Jennifer</p>
+                        <div id="button_learn">
+                            <p>Learn more</p>
+                        </div>
+                    </div>
+                    <div class="card" id="katrine">
+                        <img src="../../assets/images/main/pets-woody.png" alt="woody">
+                        <p class="pet_name">Woody</p>
+                        <div id="button_learn">
+                            <p>Learn more</p>
+                        </div>
+                    </div>
+                    <img id="arrow2" src="../../assets/images/main/button_arrow2.png" alt="arrow2">
+                </div>
+                <div id="button_pets">
+                    <p>Get to know the rest</p>
+                </div>
+            </div>
+        </section>
         <footer>
             
         </footer>
