--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -42,7 +42,7 @@
                     <img src="../../assets/images/main/about-pets.png" alt="pets">
                 </div>
                 <div id="about_text">
-                    <h3>About the shelter “Cozy House”</h3>
+                    <h3>About the shelter<br>“Cozy House”</h3>
                     <p>Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
                     <p>We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p>
                 </div>
@@ -78,6 +78,85 @@
                 </div>
                 <div id="button_pets">
                     <p>Get to know the rest</p>
+                </div>
+            </div>
+        </section>
+        <section id="help">
+            <div id="help_content">
+                <h3>How you can help<br>our shelter</h3>
+                <div id="help_list">
+                    <div class="help_card">
+                        <div class="help_image">
+                            <img id="pet-food" src="../../assets/icons/icon-pet-food.svg" alt="pet-food">
+                        </div>
+                        <h4>Pet food</h4>
+                    </div>
+                    <div class="help_card">
+                        <div class="help_image">
+                            <img id="pet-food" src="../../assets/icons/icon-transportation.svg" alt="transportation">
+                        </div>
+                        <h4>Transportation</h4>
+                    </div>
+                    <div class="help_card">
+                        <div class="help_image">
+                            <img id="pet-food" src="../../assets/icons/icon-toys.svg" alt="troys">
+                        </div>
+                        <h4>Toys</h4>
+                    </div>
+                    <div class="help_card">
+                        <div class="help_image">
+                            <img id="pet-food" src="../../assets/icons/icon-bowls-and-cups.svg" alt="bowls-and-cups">
+                        </div>
+                        <h4>Bowls and cups</h4>
+                    </div>
+                    <div class="help_card">
+                        <div class="help_image">
+                            <img id="pet-food" src="../../assets/icons/icon-shampoos.svg" alt="shampoos">
+                        </div>
+                        <h4>Shampoos</h4>
+                    </div>
+                    <div class="help_card">
+                         <div class="help_image">
+                            <img id="pet-food" src="../../assets/icons/icon-vitamins.svg" alt="vitamins">
+                        </div>
+                        <h4>Vitamins</h4>
+                    </div>
+                    <div class="help_card">
+                        <div class="help_image">
+                            <img id="pet-food" src="../../assets/icons/icon-medicines.svg" alt="medicines">
+                        </div>
+                        <h4>Medicines</h4>
+                    </div>
+                    <div class="help_card">
+                        <div class="help_image">
+                            <img id="pet-food" src="../../assets/icons/icon-collars-or-leashes.svg" alt="collars">
+                        </div>
+                        <h4>Collars / leashes</h4>
+                    </div>
+                    <div class="help_card">
+                         <div class="help_image">
+                            <img id="pet-food" src="../../assets/icons/icon-sleeping-area.svg" alt="sleeping area">
+                        </div>
+                        <h4>Sleeping area</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="donation">
+            <div id="donation_content">
+                <div id="donation_image">
+                    <img src="../../assets/images/main/donation-dog.png" alt="donation-dog">
+                </div>
+                <div id="donation_info">
+                    <h3>You can also<br>make a donation</h3>
+                    <h5>Name of the bank / Type of bank account</h5>
+                    <div id="card">
+                        <div id="donation_logo">
+                            <img id="credit_card" src="../../assets/icons/credit-card.svg" alt="credit card">
+                        </div>
+                        <h4>8380 2880 8028 8791 7435</h4>
+                    </div>
+                    <p>Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
                 </div>
             </div>
         </section>
