feat: add footer

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -161,7 +161,41 @@
             </div>
         </section>
         <footer>
-            
+            <div id="footer_content">
+                <div class="footer_section" id="contacts">
+                    <h3>For questions and suggestions</h3>
+                    <div class="footer_row" id="email">
+                        <div id="email_logo">
+                            <img src="../../assets/icons/icon-email.svg" alt="email">
+                        </div>
+                        <h4>email@shelter.com</h4>
+                    </div>
+                    <div class="footer_row" id="phone">
+                        <div id="phone_logo">
+                            <img src="../../assets/icons/icon-phone.svg" alt="phone">
+                        </div>
+                        <h4>+13 674 567 75 54</h4>
+                    </div>
+                </div>
+                <div class="footer_section" id="locations">
+                    <h3>We are waiting for your visit</h3>
+                    <div class="footer_row">
+                        <div classd="maker_logo">
+                            <img src="../../assets/icons/icon-marker.svg" alt="maker">
+                        </div>
+                        <h4>1 Central Street, Boston (entrance from the store)</h4>
+                    </div>
+                    <div class="footer_row">
+                        <div classd="maker_logo">
+                            <img src="../../assets/icons/icon-marker.svg" alt="maker">
+                        </div>
+                        <h4>18 South Park, London </h4>
+                    </div>
+                </div>
+                <div id="footer_image">
+                    <img src="../../assets/images/main/footer-puppy.png" alt="footer-puppy">
+                </div>
+            </div>
         </footer>
     </div>
     
