feat: add other elements

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -47,9 +47,48 @@
                             <p>Learn more</p>
                         </div>
                     </div>
+                    <div class="card" id="sophia">
+                        <img src="../../assets/images/pets/pets-sophia.png" alt="sophia">
+                        <p class="pet_name">Sophia</p>
+                        <div id="button_learn">
+                            <p>Learn more</p>
+                        </div>
+                    </div>
+                    <div class="card" id="timmy">
+                        <img src="../../assets/images/pets/pets-timmy.png" alt="timmy">
+                        <p class="pet_name">Timmy</p>
+                        <div id="button_learn">
+                            <p>Learn more</p>
+                        </div>
+                    </div>
+                    <div class="card" id="charly">
+                        <img src="../../assets/images/pets/pets-charly.png" alt="charly">
+                        <p class="pet_name">Charly</p>
+                        <div id="button_learn">
+                            <p>Learn more</p>
+                        </div>
+                    </div>
+                    <div class="card" id="scarlet">
+                        <img src="../../assets/images/pets/pets-scarlet.png" alt="scarlet">
+                        <p class="pet_name">Scarlet</p>
+                        <div id="button_learn">
+                            <p>Learn more</p>
+                        </div>
+                    </div>
+                    <div class="card" id="freddie">
+                        <img src="../../assets/images/pets/pets-freddie.png" alt="freddie">
+                        <p class="pet_name">Freddie</p>
+                        <div id="button_learn">
+                            <p>Learn more</p>
+                        </div>
+                    </div>
                 </div>
-                <div id="button_pets">
-                    <p>Get to know the rest</p>
+                <div id="button_area">
+                    <div class="button_navigation"><h4><<</h4></div>
+                    <div class="button_navigation"><h4><</h4></div>
+                    <div class="button_navigation"><h4>1</h4></div>
+                    <div class="button_navigation">></div>
+                    <div class="button_navigation">>></div>
                 </div>
             </div>
         </section>
