--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -11,15 +11,15 @@
         <section id="start_screen">
             <header>
                 <div id="logo">
-                    <h1>Cozy House</h1>
+                    <h1><a href="#">Cozy House</a></h1>
                     <p id="logo_phrase">Shelter for pets in Boston</p>
                 </div>
                 <nav>
                     <ul>
                         <li>About the shelter</li>
-                        <li>Our pets</li>
-                        <li>Help the shelter</li>
-                        <li>Contacts</li>
+                        <li><a href="../pets/index.html">Our pets</a></li>
+                        <li><a href="#help">Help the shelter</a></li>
+                        <li><a href="#contacts">Contacts</a></li>
                     </ul>
                 </nav>
             </header>
@@ -27,9 +27,9 @@
                 <div id="welcome_text">
                     <h2>Not only people need a house</h2>
                     <p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
-                    <div id="button_items">
-                        <p>Make a friend</p>
-                    </div>
+                    <button type="button" id="button_items">
+                        <a href="#pets">Make a friend</a>
+                    </button>
                 </div>
                 <div id="welcome_image">
                     <img src="../../assets/images/main/start-screen-puppy.png" alt="puppy">
@@ -52,33 +52,33 @@
             <div id="pets_content">
                 <h3>Our friends who<br>are looking for a house</h3>
                 <div id="slider">
-                    <img id="arrow" src="../../assets/images/main/button_arrow.png" alt="arrow">
+                    <button class="button_arrow"><img id="arrow" src="../../assets/images/main/button_arrow.png" alt="arrow"></button>
                     <div class="card" id="katrine">
                         <img src="../../assets/images/main/pets-katrine.png" alt="katrine">
                         <p class="pet_name">Katrine</p>
-                        <div id="button_learn">
-                            <p>Learn more</p>
-                        </div>
+                        <button class="button_learn">
+                            Learn more
+                        </button>
                     </div>
                     <div class="card" id="katrine">
                         <img src="../../assets/images/main/pets-jennifer.png" alt="jennifer">
                         <p class="pet_name">Jennifer</p>
-                        <div id="button_learn">
-                            <p>Learn more</p>
-                        </div>
+                        <button class="button_learn">
+                            Learn more
+                        </button>
                     </div>
                     <div class="card" id="katrine">
                         <img src="../../assets/images/main/pets-woody.png" alt="woody">
                         <p class="pet_name">Woody</p>
-                        <div id="button_learn">
-                            <p>Learn more</p>
-                        </div>
+                        <button class="button_learn">
+                            Learn more
+                        </button>
                     </div>
-                    <img id="arrow2" src="../../assets/images/main/button_arrow2.png" alt="arrow2">
+                    <button class="button_arrow"><img id="arrow2" src="../../assets/images/main/button_arrow2.png" alt="arrow2"></button>
                 </div>
-                <div id="button_pets">
-                    <p>Get to know the rest</p>
-                </div>
+                <button id="button_pets">
+                    <p><a href="../pets/index.html">Get to know the rest</a></p>
+                </button>
             </div>
         </section>
         <section id="help">
@@ -154,7 +154,7 @@
                         <div id="donation_logo">
                             <img id="credit_card" src="../../assets/icons/credit-card.svg" alt="credit card">
                         </div>
-                        <h4>8380 2880 8028 8791 7435</h4>
+                        <h4><a href="#">8380 2880 8028 8791 7435</a></h4>
                     </div>
                     <p>Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
                 </div>
@@ -168,13 +168,13 @@
                         <div id="email_logo">
                             <img src="../../assets/icons/icon-email.svg" alt="email">
                         </div>
-                        <h4>email@shelter.com</h4>
+                        <a href="mailto:email@shelter.com"><h4>email@shelter.com</h4></a>
                     </div>
                     <div class="footer_row" id="phone">
                         <div id="phone_logo">
                             <img src="../../assets/icons/icon-phone.svg" alt="phone">
                         </div>
-                        <h4>+13 674 567 75 54</h4>
+                        <a href="tel:+13 674 567 75 54"><h4>+13 674 567 75 54</h4></a>
                     </div>
                 </div>
                 <div class="footer_section" id="locations">
@@ -183,13 +183,13 @@
                         <div classd="maker_logo">
                             <img src="../../assets/icons/icon-marker.svg" alt="maker">
                         </div>
-                        <h4>1 Central Street, Boston (entrance from the store)</h4>
+                        <h4><a href="https://www.google.com/maps?ll=42.314232,-71.1350935" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
                     </div>
                     <div class="footer_row">
                         <div classd="maker_logo">
                             <img src="../../assets/icons/icon-marker.svg" alt="maker">
                         </div>
-                        <h4>18 South Park, London </h4>
+                        <h4><a href="https://www.google.com/maps?ll=51.4690816,-0.5240849" target="_blank">18 South Park, London</a></h4>
                     </div>
                 </div>
                 <div id="footer_image">
@@ -197,6 +197,7 @@
                 </div>
             </div>
         </footer>
+        <script src="script.js"></script>
     </div>
     
 </body>
