--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -10,15 +10,15 @@
     <div class="container">
         <header>
             <div id="logo">
-                <h1>Cozy House</h1>
+                <h1><a href="../main/index.html">Cozy House</a></h1>
                 <p id="logo_phrase">Shelter for pets in Boston</p>
             </div>
             <nav>
                 <ul>
-                    <li>About the shelter</li>
+                    <li><a href="../main/index.html">About the shelter</a></li>
                     <li>Our pets</li>
-                    <li>Help the shelter</li>
-                    <li>Contacts</li>
+                    <li><a href="../main/index.html#help">Help the shelter</a></li>
+                    <li><a href="#contacts">Contacts</a></li>
                 </ul>
             </nav>
         </header>          
@@ -29,66 +29,66 @@
                     <div class="card" id="katrine">
                         <img src="../../assets/images/pets/pets-katrine.png" alt="katrine">
                         <p class="pet_name">Katrine</p>
-                        <div id="button_learn">
+                        <button class="button_learn">
                             <p>Learn more</p>
-                        </div>
+                        </button>
                     </div>
                     <div class="card" id="katrine">
                         <img src="../../assets/images/pets/pets-jennifer.png" alt="jennifer">
                         <p class="pet_name">Jennifer</p>
-                        <div id="button_learn">
+                        <button class="button_learn">
                             <p>Learn more</p>
-                        </div>
+                        </button>
                     </div>
                     <div class="card" id="katrine">
                         <img src="../../assets/images/pets/pets-woody.png" alt="woody">
                         <p class="pet_name">Woody</p>
-                        <div id="button_learn">
+                        <button class="button_learn">
                             <p>Learn more</p>
-                        </div>
+                        </button>
                     </div>
                     <div class="card" id="sophia">
                         <img src="../../assets/images/pets/pets-sophia.png" alt="sophia">
                         <p class="pet_name">Sophia</p>
-                        <div id="button_learn">
+                        <button class="button_learn">
                             <p>Learn more</p>
-                        </div>
+                        </button>
                     </div>
                     <div class="card" id="timmy">
                         <img src="../../assets/images/pets/pets-timmy.png" alt="timmy">
                         <p class="pet_name">Timmy</p>
-                        <div id="button_learn">
+                        <button class="button_learn">
                             <p>Learn more</p>
-                        </div>
+                        </button>
                     </div>
                     <div class="card" id="charly">
                         <img src="../../assets/images/pets/pets-charly.png" alt="charly">
                         <p class="pet_name">Charly</p>
-                        <div id="button_learn">
+                        <button class="button_learn">
                             <p>Learn more</p>
-                        </div>
+                        </button>
                     </div>
                     <div class="card" id="scarlet">
                         <img src="../../assets/images/pets/pets-scarlet.png" alt="scarlet">
                         <p class="pet_name">Scarlet</p>
-                        <div id="button_learn">
+                        <button class="button_learn">
                             <p>Learn more</p>
-                        </div>
+                        </button>
                     </div>
                     <div class="card" id="freddie">
                         <img src="../../assets/images/pets/pets-freddie.png" alt="freddie">
                         <p class="pet_name">Freddie</p>
-                        <div id="button_learn">
+                        <button class="button_learn">
                             <p>Learn more</p>
-                        </div>
+                        </button>
                     </div>
                 </div>
                 <div id="button_area">
-                    <div class="button_navigation"><h4><<</h4></div>
-                    <div class="button_navigation"><h4><</h4></div>
-                    <div class="button_navigation"><h4>1</h4></div>
-                    <div class="button_navigation">></div>
-                    <div class="button_navigation">>></div>
+                    <button class="button_navigation" disabled><h4>&lt;&lt;</h4></button>
+                    <button class="button_navigation" disabled><h4>&lt;</h4></button>
+                    <button class="button_navigation"><h4>1</h4></button>
+                    <button class="button_navigation"><h4>&gt;</h4></button>
+                    <button class="button_navigation"><h4>&gt;&gt;</h4></button>
                 </div>
             </div>
         </section>
@@ -100,13 +100,13 @@
                         <div id="email_logo">
                             <img src="../../assets/icons/icon-email.svg" alt="email">
                         </div>
-                        <h4>email@shelter.com</h4>
+                        <a href="mailto:email@shelter.com"><h4>email@shelter.com</h4></a>
                     </div>
                     <div class="footer_row" id="phone">
                         <div id="phone_logo">
                             <img src="../../assets/icons/icon-phone.svg" alt="phone">
                         </div>
-                        <h4>+13 674 567 75 54</h4>
+                        <a href="tel:+13 674 567 75 54"><h4>+13 674 567 75 54</h4></a>
                     </div>
                 </div>
                 <div class="footer_section" id="locations">
@@ -115,13 +115,13 @@
                         <div classd="maker_logo">
                             <img src="../../assets/icons/icon-marker.svg" alt="maker">
                         </div>
-                        <h4>1 Central Street, Boston (entrance from the store)</h4>
+                        <h4><a href="https://www.google.com/maps?ll=42.314232,-71.1350935" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
                     </div>
                     <div class="footer_row">
                         <div classd="maker_logo">
                             <img src="../../assets/icons/icon-marker.svg" alt="maker">
                         </div>
-                        <h4>18 South Park, London </h4>
+                        <h4><a href="https://www.google.com/maps?ll=51.4690816,-0.5240849" target="_blank">18 South Park, London</a></h4>
                     </div>
                 </div>
                 <div id="footer_image">
