--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shelter</title>
     <link rel="stylesheet" href="styles.css">
+    <link type="image/x-icon" href="../../assets/icons/Logo.png" rel="shortcut icon">
 </head>
 <body>
     <div class="container">
