fix: fix duplicate id

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -61,14 +61,14 @@
                             Learn more
                         </button>
                     </div>
-                    <div class="card" id="katrine">
+                    <div class="card" id="jenifer">
                         <img src="../../assets/images/main/pets-jennifer.png" alt="jennifer">
                         <p class="pet_name">Jennifer</p>
                         <button class="button_learn">
                             Learn more
                         </button>
                     </div>
-                    <div class="card" id="katrine">
+                    <div class="card" id="woody">
                         <img src="../../assets/images/main/pets-woody.png" alt="woody">
                         <p class="pet_name">Woody</p>
                         <button class="button_learn">
@@ -88,55 +88,55 @@
                 <div id="help_list">
                     <div class="help_card">
                         <div class="help_image">
-                            <img id="pet-food" src="../../assets/icons/icon-pet-food.svg" alt="pet-food">
+                            <img src="../../assets/icons/icon-pet-food.svg" alt="pet-food">
                         </div>
                         <h4>Pet food</h4>
                     </div>
                     <div class="help_card">
                         <div class="help_image">
-                            <img id="pet-food" src="../../assets/icons/icon-transportation.svg" alt="transportation">
+                            <img src="../../assets/icons/icon-transportation.svg" alt="transportation">
                         </div>
                         <h4>Transportation</h4>
                     </div>
                     <div class="help_card">
                         <div class="help_image">
-                            <img id="pet-food" src="../../assets/icons/icon-toys.svg" alt="troys">
+                            <img src="../../assets/icons/icon-toys.svg" alt="troys">
                         </div>
                         <h4>Toys</h4>
                     </div>
                     <div class="help_card">
                         <div class="help_image">
-                            <img id="pet-food" src="../../assets/icons/icon-bowls-and-cups.svg" alt="bowls-and-cups">
+                            <img src="../../assets/icons/icon-bowls-and-cups.svg" alt="bowls-and-cups">
                         </div>
                         <h4>Bowls and cups</h4>
                     </div>
                     <div class="help_card">
                         <div class="help_image">
-                            <img id="pet-food" src="../../assets/icons/icon-shampoos.svg" alt="shampoos">
+                            <img src="../../assets/icons/icon-shampoos.svg" alt="shampoos">
                         </div>
                         <h4>Shampoos</h4>
                     </div>
                     <div class="help_card">
                          <div class="help_image">
-                            <img id="pet-food" src="../../assets/icons/icon-vitamins.svg" alt="vitamins">
+                            <img src="../../assets/icons/icon-vitamins.svg" alt="vitamins">
                         </div>
                         <h4>Vitamins</h4>
                     </div>
                     <div class="help_card">
                         <div class="help_image">
-                            <img id="pet-food" src="../../assets/icons/icon-medicines.svg" alt="medicines">
+                            <img src="../../assets/icons/icon-medicines.svg" alt="medicines">
                         </div>
                         <h4>Medicines</h4>
                     </div>
                     <div class="help_card">
                         <div class="help_image">
-                            <img id="pet-food" src="../../assets/icons/icon-collars-or-leashes.svg" alt="collars">
+                            <img src="../../assets/icons/icon-collars-or-leashes.svg" alt="collars">
                         </div>
                         <h4>Collars / leashes</h4>
                     </div>
                     <div class="help_card">
                          <div class="help_image">
-                            <img id="pet-food" src="../../assets/icons/icon-sleeping-area.svg" alt="sleeping area">
+                            <img src="../../assets/icons/icon-sleeping-area.svg" alt="sleeping area">
                         </div>
                         <h4>Sleeping area</h4>
                     </div>
@@ -175,19 +175,19 @@
                         <div id="phone_logo">
                             <img src="../../assets/icons/icon-phone.svg" alt="phone">
                         </div>
-                        <a href="tel:+13 674 567 75 54"><h4>+13 674 567 75 54</h4></a>
+                        <a href="tel:+136745677554"><h4>+136745677554</h4></a>
                     </div>
                 </div>
                 <div class="footer_section" id="locations">
                     <h3>We are waiting for your visit</h3>
                     <div class="footer_row">
-                        <div classd="maker_logo">
+                        <div class="maker_logo">
                             <img src="../../assets/icons/icon-marker.svg" alt="maker">
                         </div>
                         <h4><a href="https://www.google.com/maps?ll=42.314232,-71.1350935" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
                     </div>
                     <div class="footer_row">
-                        <div classd="maker_logo">
+                        <div class="maker_logo">
                             <img src="../../assets/icons/icon-marker.svg" alt="maker">
                         </div>
                         <h4><a href="https://www.google.com/maps?ll=51.4690816,-0.5240849" target="_blank">18 South Park, London</a></h4>
