fix: fix duplicate id our friends

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -28,9 +28,9 @@
                 <div id="welcome_text">
                     <h2>Not only people need a house</h2>
                     <p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
-                    <button type="button" id="button_items">
+                    <div id="button_items">
                         <a href="#pets">Make a friend</a>
-                    </button>
+                    </div>
                 </div>
                 <div id="welcome_image">
                     <img src="../../assets/images/main/start-screen-puppy.png" alt="puppy">
@@ -77,9 +77,9 @@
                     </div>
                     <button class="button_arrow"><img id="arrow2" src="../../assets/images/main/button_arrow2.png" alt="arrow2"></button>
                 </div>
-                <button id="button_pets">
-                    <p><a href="../pets/index.html">Get to know the rest</a></p>
-                </button>
+                <div id="button_pets">
+                    <a href="../pets/index.html">Get to know the rest</a>
+                </div>
             </div>
         </section>
         <section id="help">
