--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -27,56 +27,56 @@
             <div id="pets_content">
                 <h3>Our friends who<br>are looking for a house</h3>
                 <div id="slider">
-                    <div class="card" id="katrine">
+                    <div class="card">
                         <img src="../../assets/images/pets/pets-katrine.png" alt="katrine">
                         <p class="pet_name">Katrine</p>
                         <button class="button_learn">
                             <p>Learn more</p>
                         </button>
                     </div>
-                    <div class="card" id="katrine">
+                    <div class="card">
                         <img src="../../assets/images/pets/pets-jennifer.png" alt="jennifer">
                         <p class="pet_name">Jennifer</p>
                         <button class="button_learn">
                             <p>Learn more</p>
                         </button>
                     </div>
-                    <div class="card" id="katrine">
+                    <div class="card">
                         <img src="../../assets/images/pets/pets-woody.png" alt="woody">
                         <p class="pet_name">Woody</p>
                         <button class="button_learn">
                             <p>Learn more</p>
                         </button>
                     </div>
-                    <div class="card" id="sophia">
+                    <div class="card">
                         <img src="../../assets/images/pets/pets-sophia.png" alt="sophia">
                         <p class="pet_name">Sophia</p>
                         <button class="button_learn">
                             <p>Learn more</p>
                         </button>
                     </div>
-                    <div class="card" id="timmy">
+                    <div class="card">
                         <img src="../../assets/images/pets/pets-timmy.png" alt="timmy">
                         <p class="pet_name">Timmy</p>
                         <button class="button_learn">
                             <p>Learn more</p>
                         </button>
                     </div>
-                    <div class="card" id="charly">
+                    <div class="card">
                         <img src="../../assets/images/pets/pets-charly.png" alt="charly">
                         <p class="pet_name">Charly</p>
                         <button class="button_learn">
                             <p>Learn more</p>
                         </button>
                     </div>
-                    <div class="card" id="scarlet">
+                    <div class="card">
                         <img src="../../assets/images/pets/pets-scarlet.png" alt="scarlet">
                         <p class="pet_name">Scarlet</p>
                         <button class="button_learn">
                             <p>Learn more</p>
                         </button>
                     </div>
-                    <div class="card" id="freddie">
+                    <div class="card">
                         <img src="../../assets/images/pets/pets-freddie.png" alt="freddie">
                         <p class="pet_name">Freddie</p>
                         <button class="button_learn">
@@ -107,7 +107,7 @@
                         <div id="phone_logo">
                             <img src="../../assets/icons/icon-phone.svg" alt="phone">
                         </div>
-                        <a href="tel:+13 674 567 75 54"><h4>+13 674 567 75 54</h4></a>
+                        <a href="tel:+136745677554"><h4>+136745677554</h4></a>
                     </div>
                 </div>
                 <div class="footer_section" id="locations">
