fix: fix duplicate id our friends

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -31,65 +31,65 @@
                         <img src="../../assets/images/pets/pets-katrine.png" alt="katrine">
                         <p class="pet_name">Katrine</p>
                         <button class="button_learn">
-                            <p>Learn more</p>
+                            Learn more
                         </button>
                     </div>
                     <div class="card">
                         <img src="../../assets/images/pets/pets-jennifer.png" alt="jennifer">
                         <p class="pet_name">Jennifer</p>
                         <button class="button_learn">
-                            <p>Learn more</p>
+                            Learn more
                         </button>
                     </div>
                     <div class="card">
                         <img src="../../assets/images/pets/pets-woody.png" alt="woody">
                         <p class="pet_name">Woody</p>
                         <button class="button_learn">
-                            <p>Learn more</p>
+                            Learn more
                         </button>
                     </div>
                     <div class="card">
                         <img src="../../assets/images/pets/pets-sophia.png" alt="sophia">
                         <p class="pet_name">Sophia</p>
                         <button class="button_learn">
-                            <p>Learn more</p>
+                            Learn more
                         </button>
                     </div>
                     <div class="card">
                         <img src="../../assets/images/pets/pets-timmy.png" alt="timmy">
                         <p class="pet_name">Timmy</p>
                         <button class="button_learn">
-                            <p>Learn more</p>
+                            Learn more
                         </button>
                     </div>
                     <div class="card">
                         <img src="../../assets/images/pets/pets-charly.png" alt="charly">
                         <p class="pet_name">Charly</p>
                         <button class="button_learn">
-                            <p>Learn more</p>
+                            Learn more
                         </button>
                     </div>
                     <div class="card">
                         <img src="../../assets/images/pets/pets-scarlet.png" alt="scarlet">
                         <p class="pet_name">Scarlet</p>
                         <button class="button_learn">
-                            <p>Learn more</p>
+                            Learn more
                         </button>
                     </div>
                     <div class="card">
                         <img src="../../assets/images/pets/pets-freddie.png" alt="freddie">
                         <p class="pet_name">Freddie</p>
                         <button class="button_learn">
-                            <p>Learn more</p>
+                            Learn more
                         </button>
                     </div>
                 </div>
                 <div id="button_area">
-                    <button class="button_navigation" disabled><h4>&lt;&lt;</h4></button>
-                    <button class="button_navigation" disabled><h4>&lt;</h4></button>
-                    <button class="button_navigation"><h4>1</h4></button>
-                    <button class="button_navigation"><h4>&gt;</h4></button>
-                    <button class="button_navigation"><h4>&gt;&gt;</h4></button>
+                    <button class="button_navigation" disabled>&lt;&lt;</button>
+                    <button class="button_navigation" disabled>&lt;</button>
+                    <button class="button_navigation">1</button>
+                    <button class="button_navigation">&gt;</button>
+                    <button class="button_navigation">&gt;&gt;</button>
                 </div>
             </div>
         </section>
@@ -113,13 +113,13 @@
                 <div class="footer_section" id="locations">
                     <h3>We are waiting for your visit</h3>
                     <div class="footer_row">
-                        <div classd="maker_logo">
+                        <div class="maker_logo">
                             <img src="../../assets/icons/icon-marker.svg" alt="maker">
                         </div>
                         <h4><a href="https://www.google.com/maps?ll=42.314232,-71.1350935" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
                     </div>
                     <div class="footer_row">
-                        <div classd="maker_logo">
+                        <div class="maker_logo">
                             <img src="../../assets/icons/icon-marker.svg" alt="maker">
                         </div>
                         <h4><a href="https://www.google.com/maps?ll=51.4690816,-0.5240849" target="_blank">18 South Park, London</a></h4>
