--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -26,7 +26,7 @@
             </header>
             <div id="welcome">
                 <div id="welcome_text">
-                    <h2>Not only people</br> need a house</h2>
+                    <h2>Not only people<br>need a house</h2>
                     <p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
                     <div id="button_items">
                         <a href="#pets">Make a friend</a>
