fix: fix position

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -165,36 +165,38 @@
         </section>
         <footer>
             <div id="footer_content">
-                <div class="footer_section" id="contacts">
-                    <h3>For questions and suggestions</h3>
-                    <div class="footer_row" id="email">
-                        <div id="email_logo">
-                            <img src="../../assets/icons/icon-email.svg" alt="email">
+                <div id="footer_info">
+                    <div class="footer_section" id="contacts">
+                        <h3>For questions and suggestions</h3>
+                        <div class="footer_row" id="email">
+                            <div id="email_logo">
+                                <img src="../../assets/icons/icon-email.svg" alt="email">
+                            </div>
+                            <a href="mailto:email@shelter.com"><h4>email@shelter.com</h4></a>
                         </div>
-                        <a href="mailto:email@shelter.com"><h4>email@shelter.com</h4></a>
-                    </div>
-                    <div class="footer_row" id="phone">
-                        <div id="phone_logo">
-                            <img src="../../assets/icons/icon-phone.svg" alt="phone">
+                        <div class="footer_row" id="phone">
+                            <div id="phone_logo">
+                                <img src="../../assets/icons/icon-phone.svg" alt="phone">
+                            </div>
+                            <a href="tel:+136745677554"><h4>+136745677554</h4></a>
                         </div>
-                        <a href="tel:+136745677554"><h4>+136745677554</h4></a>
                     </div>
-                </div>
-                <div class="footer_section" id="locations">
-                    <h3>We are waiting for your visit</h3>
-                    <div class="footer_row">
-                        <div class="maker_logo">
-                            <img src="../../assets/icons/icon-marker.svg" alt="maker">
+                    <div class="footer_section" id="locations">
+                        <h3>We are waiting for your visit</h3>
+                        <div class="footer_row">
+                            <div class="maker_logo">
+                                <img src="../../assets/icons/icon-marker.svg" alt="maker">
+                            </div>
+                            <h4><a href="https://www.google.com/maps?ll=42.314232,-71.1350935" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
                         </div>
-                        <h4><a href="https://www.google.com/maps?ll=42.314232,-71.1350935" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
-                    </div>
-                    <div class="footer_row">
-                        <div class="maker_logo">
-                            <img src="../../assets/icons/icon-marker.svg" alt="maker">
+                        <div class="footer_row">
+                            <div class="maker_logo">
+                                <img src="../../assets/icons/icon-marker.svg" alt="maker">
+                            </div>
+                            <h4><a href="https://www.google.com/maps?ll=51.4690816,-0.5240849" target="_blank">18 South Park, London</a></h4>
                         </div>
-                        <h4><a href="https://www.google.com/maps?ll=51.4690816,-0.5240849" target="_blank">18 South Park, London</a></h4>
                     </div>
-                </div>
+                </div>    
                 <div id="footer_image">
                     <img src="../../assets/images/main/footer-puppy.png" alt="footer-puppy">
                 </div>
