--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -157,7 +157,7 @@
                         <div id="donation_logo">
                             <img id="credit_card" src="../../assets/icons/credit-card.svg" alt="credit card">
                         </div>
-                        <h4><a href="#">8380 2880 8028 8791 7435</a></h4>
+                        <h4><a href="#">8380&nbsp;2880&nbsp;8028&nbsp;8791&nbsp;7435</a></h4>
                     </div>
                     <p>Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
                 </div>
@@ -178,7 +178,7 @@
                             <div id="phone_logo">
                                 <img src="../../assets/icons/icon-phone.svg" alt="phone">
                             </div>
-                            <a href="tel:+136745677554"><h4>+136745677554</h4></a>
+                            <a href="tel:+136745677554"><h4>+13&nbsp;674&nbsp;567&nbsp;75&nbsp;54</h4></a>
                         </div>
                     </div>
                     <div class="footer_section" id="locations">
