--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -9,129 +9,135 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <div id="logo">
-                <h1><a href="../main/index.html">Cozy House</a></h1>
-                <p id="logo_phrase">Shelter for pets in Boston</p>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="../main/index.html">About the shelter</a></li>
-                    <li>Our pets</li>
-                    <li><a href="../main/index.html#help">Help the shelter</a></li>
-                    <li><a href="#contacts">Contacts</a></li>
-                </ul>
-            </nav>
-        </header>          
-        <section id="pets">
-            <div id="pets_content">
-                <h3>Our friends who<br>are looking for a house</h3>
-                <div id="slider">
-                    <div class="card">
-                        <img src="../../assets/images/pets/pets-katrine.png" alt="katrine">
-                        <p class="pet_name">Katrine</p>
-                        <button class="button_learn">
-                            Learn more
-                        </button>
+        <div class="wrapper" id="header_wrapper">
+            <header>
+                <div id="logo">
+                    <h1><a href="../main/index.html">Cozy House</a></h1>
+                    <p id="logo_phrase">Shelter for pets in Boston</p>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="../main/index.html">About the shelter</a></li>
+                        <li>Our pets</li>
+                        <li><a href="../main/index.html#help">Help the shelter</a></li>
+                        <li><a href="#contacts">Contacts</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>    
+        <div class="wrapper" id="pets_wrapper">          
+            <section id="pets">
+                <div id="pets_content">
+                    <h3>Our friends who<br>are looking for a house</h3>
+                    <div id="slider">
+                        <div class="card">
+                            <img src="../../assets/images/pets/pets-katrine.png" alt="katrine">
+                            <p class="pet_name">Katrine</p>
+                            <button class="button_learn">
+                                Learn more
+                            </button>
+                        </div>
+                        <div class="card">
+                            <img src="../../assets/images/pets/pets-jennifer.png" alt="jennifer">
+                            <p class="pet_name">Jennifer</p>
+                            <button class="button_learn">
+                                Learn more
+                            </button>
+                        </div>
+                        <div class="card">
+                            <img src="../../assets/images/pets/pets-woody.png" alt="woody">
+                            <p class="pet_name">Woody</p>
+                            <button class="button_learn">
+                                Learn more
+                            </button>
+                        </div>
+                        <div class="card">
+                            <img src="../../assets/images/pets/pets-sophia.png" alt="sophia">
+                            <p class="pet_name">Sophia</p>
+                            <button class="button_learn">
+                                Learn more
+                            </button>
+                        </div>
+                        <div class="card">
+                            <img src="../../assets/images/pets/pets-timmy.png" alt="timmy">
+                            <p class="pet_name">Timmy</p>
+                            <button class="button_learn">
+                                Learn more
+                            </button>
+                        </div>
+                        <div class="card">
+                            <img src="../../assets/images/pets/pets-charly.png" alt="charly">
+                            <p class="pet_name">Charly</p>
+                            <button class="button_learn">
+                                Learn more
+                            </button>
+                        </div>
+                        <div class="card">
+                            <img src="../../assets/images/pets/pets-scarlet.png" alt="scarlet">
+                            <p class="pet_name">Scarlet</p>
+                            <button class="button_learn">
+                                Learn more
+                            </button>
+                        </div>
+                        <div class="card">
+                            <img src="../../assets/images/pets/pets-freddie.png" alt="freddie">
+                            <p class="pet_name">Freddie</p>
+                            <button class="button_learn">
+                                Learn more
+                            </button>
+                        </div>
                     </div>
-                    <div class="card">
-                        <img src="../../assets/images/pets/pets-jennifer.png" alt="jennifer">
-                        <p class="pet_name">Jennifer</p>
-                        <button class="button_learn">
-                            Learn more
-                        </button>
-                    </div>
-                    <div class="card">
-                        <img src="../../assets/images/pets/pets-woody.png" alt="woody">
-                        <p class="pet_name">Woody</p>
-                        <button class="button_learn">
-                            Learn more
-                        </button>
-                    </div>
-                    <div class="card">
-                        <img src="../../assets/images/pets/pets-sophia.png" alt="sophia">
-                        <p class="pet_name">Sophia</p>
-                        <button class="button_learn">
-                            Learn more
-                        </button>
-                    </div>
-                    <div class="card">
-                        <img src="../../assets/images/pets/pets-timmy.png" alt="timmy">
-                        <p class="pet_name">Timmy</p>
-                        <button class="button_learn">
-                            Learn more
-                        </button>
-                    </div>
-                    <div class="card">
-                        <img src="../../assets/images/pets/pets-charly.png" alt="charly">
-                        <p class="pet_name">Charly</p>
-                        <button class="button_learn">
-                            Learn more
-                        </button>
-                    </div>
-                    <div class="card">
-                        <img src="../../assets/images/pets/pets-scarlet.png" alt="scarlet">
-                        <p class="pet_name">Scarlet</p>
-                        <button class="button_learn">
-                            Learn more
-                        </button>
-                    </div>
-                    <div class="card">
-                        <img src="../../assets/images/pets/pets-freddie.png" alt="freddie">
-                        <p class="pet_name">Freddie</p>
-                        <button class="button_learn">
-                            Learn more
-                        </button>
+                    <div id="button_area">
+                        <button class="button_navigation" disabled>&lt;&lt;</button>
+                        <button class="button_navigation" disabled>&lt;</button>
+                        <button class="button_navigation">1</button>
+                        <button class="button_navigation">&gt;</button>
+                        <button class="button_navigation">&gt;&gt;</button>
                     </div>
                 </div>
-                <div id="button_area">
-                    <button class="button_navigation" disabled>&lt;&lt;</button>
-                    <button class="button_navigation" disabled>&lt;</button>
-                    <button class="button_navigation">1</button>
-                    <button class="button_navigation">&gt;</button>
-                    <button class="button_navigation">&gt;&gt;</button>
-                </div>
-            </div>
-        </section>
-        <footer>
-            <div id="footer_content">
-                <div id="footer_info">
-                    <div class="footer_section" id="contacts">
-                        <h3>For questions and suggestions</h3>
-                        <div class="footer_row" id="email">
-                            <div id="email_logo">
-                                <img src="../../assets/icons/icon-email.svg" alt="email">
+            </section>
+        </div>
+        <div class="wrapper" id="footer_wrapper">    
+            <footer>
+                <div id="footer_content">
+                    <div id="footer_info">
+                        <div class="footer_section" id="contacts">
+                            <h3>For questions and suggestions</h3>
+                            <div class="footer_row" id="email">
+                                <div id="email_logo">
+                                    <img src="../../assets/icons/icon-email.svg" alt="email">
+                                </div>
+                                <a href="mailto:email@shelter.com"><h4>email@shelter.com</h4></a>
                             </div>
-                            <a href="mailto:email@shelter.com"><h4>email@shelter.com</h4></a>
-                        </div>
-                        <div class="footer_row" id="phone">
-                            <div id="phone_logo">
-                                <img src="../../assets/icons/icon-phone.svg" alt="phone">
+                            <div class="footer_row" id="phone">
+                                <div id="phone_logo">
+                                    <img src="../../assets/icons/icon-phone.svg" alt="phone">
+                                </div>
+                                <a href="tel:+136745677554"><h4>+13&nbsp;674&nbsp;567&nbsp;75&nbsp;54</h4></a>
                             </div>
-                            <a href="tel:+136745677554"><h4>+13&nbsp;674&nbsp;567&nbsp;75&nbsp;54</h4></a>
                         </div>
+                        <div class="footer_section" id="locations">
+                            <h3>We are waiting for your visit</h3>
+                            <div class="footer_row">
+                                <div class="maker_logo">
+                                    <img src="../../assets/icons/icon-marker.svg" alt="maker">
+                                </div>
+                                <h4><a href="https://www.google.com/maps?ll=42.314232,-71.1350935" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
+                            </div>
+                            <div class="footer_row">
+                                <div class="maker_logo">
+                                    <img src="../../assets/icons/icon-marker.svg" alt="maker">
+                                </div>
+                                <h4><a href="https://www.google.com/maps?ll=51.4690816,-0.5240849" target="_blank">18 South Park, London</a></h4>
+                            </div>
+                        </div>
+                    </div>    
+                    <div id="footer_image">
+                        <img src="../../assets/images/main/footer-puppy.png" alt="footer-puppy">
                     </div>
-                    <div class="footer_section" id="locations">
-                        <h3>We are waiting for your visit</h3>
-                        <div class="footer_row">
-                            <div class="maker_logo">
-                                <img src="../../assets/icons/icon-marker.svg" alt="maker">
-                            </div>
-                            <h4><a href="https://www.google.com/maps?ll=42.314232,-71.1350935" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
-                        </div>
-                        <div class="footer_row">
-                            <div class="maker_logo">
-                                <img src="../../assets/icons/icon-marker.svg" alt="maker">
-                            </div>
-                            <h4><a href="https://www.google.com/maps?ll=51.4690816,-0.5240849" target="_blank">18 South Park, London</a></h4>
-                        </div>
-                    </div>
-                </div>    
-                <div id="footer_image">
-                    <img src="../../assets/images/main/footer-puppy.png" alt="footer-puppy">
                 </div>
-            </div>
-        </footer>
+            </footer>
+        </div>    
     </div>
     
 </body>
