--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -177,13 +177,13 @@
                             <h3>For questions and suggestions</h3>
                             <div class="footer_row" id="email">
                                 <div id="email_logo">
-                                    <img src="../../assets/icons/icon-email.svg" alt="email">
+                                    <a href="mailto:email@shelter.com"><img src="../../assets/icons/icon-email.svg" alt="email"></a>
                                 </div>
                                 <a href="mailto:email@shelter.com"><h4>email@shelter.com</h4></a>
                             </div>
                             <div class="footer_row" id="phone">
                                 <div id="phone_logo">
-                                    <img src="../../assets/icons/icon-phone.svg" alt="phone">
+                                    <a href="tel:+136745677554"><img src="../../assets/icons/icon-phone.svg" alt="phone"></a>
                                 </div>
                                 <a href="tel:+136745677554"><h4>+13&nbsp;674&nbsp;567&nbsp;75&nbsp;54</h4></a>
                             </div>
@@ -192,13 +192,13 @@
                             <h3>We are waiting for your visit</h3>
                             <div class="footer_row">
                                 <div class="maker_logo">
-                                    <img src="../../assets/icons/icon-marker.svg" alt="maker">
+                                    <a href="https://www.google.com/maps?ll=42.314232,-71.1350935" target="_blank"><img src="../../assets/icons/icon-marker.svg" alt="maker"></a>
                                 </div>
                                 <h4><a href="https://www.google.com/maps?ll=42.314232,-71.1350935" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
                             </div>
                             <div class="footer_row">
                                 <div class="maker_logo">
-                                    <img src="../../assets/icons/icon-marker.svg" alt="maker">
+                                    <a href="https://www.google.com/maps?ll=51.4690816,-0.5240849" target="_blank"><img src="../../assets/icons/icon-marker.svg" alt="maker"></a>
                                 </div>
                                 <h4><a href="https://www.google.com/maps?ll=51.4690816,-0.5240849" target="_blank">18 South Park, London</a></h4>
                             </div>
