--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -34,7 +34,12 @@
                         </div>
                     </div>
                     <div id="welcome_image">
-                        <img src="../../assets/images/main/start-screen-puppy-1280.png" alt="puppy">
+                        <img src="../../assets/images/main/start-screen-puppy-1280.png" 
+                             alt="puppy"
+                             srcset="../../assets/images/main/start-screen-puppy-320.png 350w,
+                                     ../../assets/images/main/start-screen-puppy-768.png 900w,
+                                     ../../assets/images/main/start-screen-puppy-1280.png 1300w"
+                        >
                     </div>
                 </div>
             </section>
