fix: fix position

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -33,14 +33,7 @@
                             <a href="#pets">Make a friend</a>
                         </div>
                     </div>
-                    
-                        <img src="../../assets/images/main/start-screen-puppy-1280.png" 
-                             alt="puppy"
-                             srcset="../../assets/images/main/start-screen-puppy-320.png 350w,
-                                     ../../assets/images/main/start-screen-puppy-768.png 900w,
-                                     ../../assets/images/main/start-screen-puppy-1280.png 1300w"
-                        >
-                   
+                        <img src="../../assets/images/main/start-screen-puppy-1280.png" alt="puppy">
                 </div>
             </section>
         </div>    
