--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -16,7 +16,7 @@
                         <h1><a href="#">Cozy House</a></h1>
                         <p id="logo_phrase">Shelter for pets in Boston</p>
                     </div>
-                    <nav>
+                    <nav id="nav_main">
                         <ul>
                             <li>About the shelter</li>
                             <li><a href="../pets/index.html">Our pets</a></li>
@@ -24,6 +24,10 @@
                             <li><a href="#contacts">Contacts</a></li>
                         </ul>
                     </nav>
+                    <div class="menu">
+                        <input type="checkbox" id="burger-menu" class="burger-menu">
+                        <label for="burger-menu" class="burger"></label>
+                    </div>
                 </header>
                 <div id="welcome">
                     <div id="welcome_text">
