feat: add complete second page

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -15,7 +15,7 @@
                     <h1><a href="../main/index.html">Cozy House</a></h1>
                     <p id="logo_phrase">Shelter for pets in Boston</p>
                 </div>
-                <nav>
+                <nav id="nav_main">
                     <ul>
                         <li><a href="../main/index.html">About the shelter</a></li>
                         <li>Our pets</li>
@@ -23,6 +23,10 @@
                         <li><a href="#contacts">Contacts</a></li>
                     </ul>
                 </nav>
+                <div class="menu">
+                    <input type="checkbox" id="burger-menu" class="burger-menu">
+                    <label for="burger-menu" class="burger"></label>
+                </div>
             </header>
         </div>    
         <div class="wrapper" id="pets_wrapper">          
@@ -51,35 +55,35 @@
                                 Learn more
                             </button>
                         </div>
-                        <div class="card">
+                        <div class="card" id="sophia">
                             <img src="../../assets/images/pets/pets-sophia.png" alt="sophia">
                             <p class="pet_name">Sophia</p>
                             <button class="button_learn">
                                 Learn more
                             </button>
                         </div>
-                        <div class="card">
+                        <div class="card" id="timmy">
                             <img src="../../assets/images/pets/pets-timmy.png" alt="timmy">
                             <p class="pet_name">Timmy</p>
                             <button class="button_learn">
                                 Learn more
                             </button>
                         </div>
-                        <div class="card">
+                        <div class="card" id="charly">
                             <img src="../../assets/images/pets/pets-charly.png" alt="charly">
                             <p class="pet_name">Charly</p>
                             <button class="button_learn">
                                 Learn more
                             </button>
                         </div>
-                        <div class="card">
+                        <div class="card" id="scarlet">
                             <img src="../../assets/images/pets/pets-scarlet.png" alt="scarlet">
                             <p class="pet_name">Scarlet</p>
                             <button class="button_learn">
                                 Learn more
                             </button>
                         </div>
-                        <div class="card">
+                        <div class="card" id="freddie">
                             <img src="../../assets/images/pets/pets-freddie.png" alt="freddie">
                             <p class="pet_name">Freddie</p>
                             <button class="button_learn">
