feat: add burger menu

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="navigation_background"></div>
         <div class="wrapper" id="start_wrapper">
             <section id="start_screen">
                 <header>
@@ -16,14 +17,15 @@
                         <h1><a href="#">Cozy House</a></h1>
                         <p id="logo_phrase">Shelter for pets in Boston</p>
                     </div>
-                    <nav id="nav_main">
-                        <ul>
+                    <nav id="nav_main" class="nav_main">
+                        <ul class="navigation_list">
                             <li>About the shelter</li>
-                            <li><a href="../pets/index.html">Our pets</a></li>
-                            <li><a href="#help">Help the shelter</a></li>
-                            <li><a href="#contacts">Contacts</a></li>
+                            <li><a href="../pets/index.html" class="navigation_link">Our pets</a></li>
+                            <li><a href="#help" class="navigation_link">Help the shelter</a></li>
+                            <li><a href="#contacts" class="navigation_link">Contacts</a></li>
                         </ul>
                     </nav>
+                    
                     <div class="menu">
                         <input type="checkbox" id="burger-menu" class="burger-menu">
                         <label for="burger-menu" class="burger"></label>
