--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -9,18 +9,19 @@
 </head>
 <body>
     <div class="container">
+        <div class="navigation_background"></div>
         <div class="wrapper" id="header_wrapper">
             <header>
                 <div id="logo">
                     <h1><a href="../main/index.html">Cozy House</a></h1>
                     <p id="logo_phrase">Shelter for pets in Boston</p>
                 </div>
-                <nav id="nav_main">
-                    <ul>
-                        <li><a href="../main/index.html">About the shelter</a></li>
+                <nav id="nav_main" class="nav_main">
+                    <ul class="navigation_list">
+                        <li><a href="../main/index.html" class="navigation_link">About the shelter</a></li>
                         <li>Our pets</li>
-                        <li><a href="../main/index.html#help">Help the shelter</a></li>
-                        <li><a href="#contacts">Contacts</a></li>
+                        <li><a href="../main/index.html#help" class="navigation_link">Help the shelter</a></li>
+                        <li><a href="#contacts" class="navigation_link">Contacts</a></li>
                     </ul>
                 </nav>
                 <div class="menu">
@@ -141,7 +142,8 @@
                     </div>
                 </div>
             </footer>
-        </div>    
+        </div>
+        <script src="script.js"></script>    
     </div>
     
 </body>
