feat: add popup

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -203,6 +203,11 @@
                     </div>
                 </div>
             </footer>
+        </div>
+        <div class="popup_wrapper">
+            <div class="popup">
+                
+            </div>
         </div>    
         <script src="script.js"></script>
     </div>
