feat: add navigation

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -40,7 +40,7 @@
                     <div id="button_area">
                         <button class="button_navigation first_page">&lt;&lt;</button>
                         <button class="button_navigation previous_page">&lt;</button>
-                        <button class="button_navigation current_page">1</button>
+                        <button class="button_navigation current_page"></button>
                         <button class="button_navigation next_page">&gt;</button>
                         <button class="button_navigation last_page">&gt;&gt;</button>
                     </div>
